[workspace]
members = ["contracts/*", "packages/*"] # 

[workspace.package]
version = "0.0.1"
authors = ["Dat Andre <junojunojunojuno@proton.me>"]
edition = "2021"
name = "caveat_protocol"
description = "Caveat Protocol"
rust-version = "1.65.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

#[features]
# for more explicit tests, cargo test --features=backtraces
#backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
#library = []

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[workspace.dependencies]
cosmwasm-schema = "1.1.9"
cosmwasm-std = { version = "1.1.9", features = ["stargate", "staking"] }
cosmwasm-storage = "1.1.9"
cw-storage-plus = "0.16"
cw-utils = "0.16"
cw2 = "0.16"
cw20 = "0.16"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

util-types = { path = "./packages/util-types" }
cw-paginate = { path = "./packages/cw-paginate" }

#[workspace.dev-dependencies]
#cw-multi-test = "0.15.1"
